--- a/cobrancas.html
+++ b/cobrancas.html
@@ -21,7 +21,7 @@
 
     <nav class="menu-lateral_side sidenav shadow-sm ">
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
-        <a href="./dashboard.html" class="menu-lateral__link_side menu-lateral__link_side--dashboard">Dashboard</a>
+        <a href="./index.html" class="menu-lateral__link_side menu-lateral__link_side--dashboard">Dashboard</a>
         <a href="#"
             class="menu-lateral__link_side menu-lateral__link_side--cobrancas menu-lateral__link_side--ativo">Cobranças</a>
         <a href="./relatorios.html" class="menu-lateral__link_side menu-lateral__link_side--relatorios">Relatórios</a>
@@ -38,7 +38,7 @@
                     <span class="cabeçalho__menu-hamburguer container__imagem"></span>
                 </label>
                 <ul class="lista-menu shadow-sm">
-                    <a href="./dashboard.html" class="menu-lateral__link menu-lateral__link--dashboard">Dashboard</a>
+                    <a href="./index.html" class="menu-lateral__link menu-lateral__link--dashboard">Dashboard</a>
                     <a href="#"
                         class="menu-lateral__link menu-lateral__link--cobrancas menu-lateral__link--ativo">Cobranças</a>
                     <a href="./relatorios.html" class="menu-lateral__link menu-lateral__link--relatorios">Relatórios</a>
